--- a/src/Components/TodoForm/todo-form.scss
+++ b/src/Components/TodoForm/todo-form.scss
@@ -9,9 +9,11 @@
   align-items: center;
 
   &__container {
-    display: flex;
-    align-items: center;
-    position: relative;
+    form {
+      display: flex;
+      align-items: center;
+      position: relative;
+    }
   }
 
   &__button {
